# ethereum-prover

./: CHANGELOG.md  Cargo.toml
docker/ethereum-prover/: Dockerfile
ethereum_prover/: Cargo.toml  README.md
ethereum_prover/configs/: ethproofs_prod.yaml  ethproofs_staging.yaml
ethereum_prover/src/: lib.rs  main.rs  proof_output.rs  types.rs  verification_key_format.rs  verifier_artifacts.rs
ethereum_prover/src/clients/ethproofs/: mod.rs
ethereum_prover/src/config/: cli.rs  mod.rs
ethereum_prover/src/prover/: airbender_compat.rs  gpu_prover.rs  mod.rs  proof_format.rs
ethereum_prover/src/tasks/: gpu_prove.rs
ethereum_prover/tests/: integration.rs
proof_verifier_js/: README.md
proof_verifier_js/demo/src/: App.vue
proof_verifier_js/ts/: README.md
proof_verifier_js/ts/src/: index.ts
proof_verifier_js/wasm/: Cargo.toml
proof_verifier_js/wasm/src/: lib.rs  proof_format.rs  unified_verifier.rs  verification_key_format.rs
scripts/: copy_artifacts.sh
test_fixtures/proof_format/: security_100_unit_envelope.hex
test_fixtures/verification_key_format/: security_100_unit_key.hex
