[package]
name = "ethereum_prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1"
alloy = { version = "1", features = ["rlp", "full", "ssz", "eips"] }
bincode = { version = "2", features = ["serde"] }
base64 = "0.21.7"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.12", features = ["json"] }
ruint = { workspace = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
thiserror = "1"

# For local debugging: replace remote dependencies with local ones, init the submodule, and get convenient debugging experience.
# DO NOT use local dependencies outside of debugging.
# forward_system = { path = "../zksync-os/forward_system", features = ["no_print", "pectra" ] }
# oracle_provider = { path = "../zksync-os/oracle_provider" }
# callable_oracles = { path = "../zksync-os/callable_oracles" }
# crypto = { path = "../zksync-os/crypto" }
# zk_ee = { path = "../zksync-os/zk_ee" }
# basic_system = { path = "../zksync-os/basic_system" }
# basic_bootloader = { path = "../zksync-os/basic_bootloader" }
# zksync_os_runner = { path = "../zksync-os/zksync_os_runner" }
# system_hooks = { path = "../zksync-os/system_hooks", features = ["p256_precompile"] }

forward_system = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6", features = ["no_print", "pectra"] }
oracle_provider = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
callable_oracles = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
crypto = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
zk_ee = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
basic_system = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
basic_bootloader = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
zksync_os_runner = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6" }
system_hooks = { git = "https://github.com/matter-labs/zksync-os", rev = "7032e1689bb3337067dfa0c66c6d08cbdfde16f6", features = ["p256_precompile"] }

# Keep the proving stack on the new Airbender while zksync-os stays on the
# old revision. The oracle compatibility layer bridges the two ND-source traits
# without serializing witness input.
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["prover", "gpu_prover"] }
airbender_riscv_transpiler = { package = "riscv_transpiler", git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["delegation"] }
airbender_verifier_common = { package = "verifier_common", git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false }
old_airbender_riscv_transpiler = { package = "riscv_transpiler", git = "https://github.com/matter-labs/zksync-airbender", rev = "cef19b322a08ad0fc09c24cd0171eea4c9918a5d", default-features = false }
smart-config = "0.4.0-pre.1"
serde_yaml = "0.9.34"
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2"
sentry = { version = "0.32", default-features = false, features = ["anyhow", "panic", "transport"] }
sentry-anyhow = "0.32"
vise = "0.3.2"
vise-exporter = "0.3.2"

[dev-dependencies]
tempfile = "3"

# [features]
# with_gpu_prover = ["execution_utils", "execution_utils/prover", "execution_utils/gpu_prover", "risc_v_simulator"]
