[package]
name = "proof_verifier_wasm"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

# Disabling `wasm-opt` makes the build faster, but the resulting wasm file is much larger.
# Uncommented now, because it takes too much time in CI -- dependency graph should be optimized,
# so that it doesn't take forever. In case of new release required, comment the lines below.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = { version = "2", features = ["serde"] }
flate2 = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

full_statement_verifier = { git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["unified_verifier_only_security_80", "unified_verifier_only_security_100"] }
verifier_common = { git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["proof_utils", "security_80", "security_100"] }
prover = { git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["definitions_only"] }
cs = { git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["compiler"] }
field = { git = "https://github.com/matter-labs/zksync-airbender", rev = "73d69b5346b3c2350fa104a56ec4df78840cea99", default-features = false, features = ["no_inline"] }
